# 2dChunking

./: .gitignore  README.md  coordinates.py  csvGenerator.py  example_hash_usage.py  hashMap.py  hash_check.py  main.py  pyproject.toml  test_features.py  test_hashAI.py  test_resize.py
chunking/: __init__.py  __main__.py  config.py  grid.py  search.py
examples/: hash_usage.py
hashmap/: __init__.py  benchmark.py  map.py
tests/: test_chunking.py  test_features.py  test_hashmap.py  test_resize.py
