[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "2dchunking"
version = "0.1.0"
description = "2D chunking and custom hash map"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hashmap*", "chunking*"]

[tool.setuptools]
py-modules = ["coordinates"]
